Updated css and add javascript code
There is no javascript code to this app

--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,7 @@
 
     background: linear-gradient(rgba(1, 29, 26, 0.10), #040c2c);
     border-radius: 21px;
+    box-shadow: 1px 7px #040c2c;
 }
 
 
@@ -24,26 +25,48 @@
     text-align: center;
     border-radius: 33px;
     font-size: large;
+    box-shadow: 1px 7px #040c2c;
 
     margin: 5px 5px 5px 5px;
 padding: 15px 15px 15px 15px;
+}
+span:hover{
+    background-color: mediumpurple;
 }
 
 #clear {
     background: red;
     color: black;
+
+
 }
+#clear:hover{
+    background-color: floralwhite;
+    color: red;
+
+}
+
 #equal {
     background: blue;
     color: white;
 }
+#equal:hover {
+    background-color: green;
+}
+
 .top {
     padding-bottom: 30px;
+    text-align: center;
+    font-size: large;
+    font-family: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 .display{
     height: 11px;
     width: 280px;
-    background: rgba(242, 255, 188, 0.49);
+    background: white;
     padding-bottom: 30px;
     border-radius: 30px;
+    text-align: center;
+    font-size: large;
+    font-family: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
